--- a/03_07/index.html
+++ b/03_07/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module demo</title>
+    <title>Accessing object properties</title>
     <script src="script.js" defer></script>
   </head>
   <body></body>
